// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane P1 — the phone is unchanged (golden) plans list, iOS 390 1`] = `
{
  "lines": 626,
  "sha256": "72229f6a1b712416dccbc7b8d0e75dc572a0857ec1840ec00bb0b6a9cc6d8e2a",
}
`;

exports[`lane P1 — the phone is unchanged (golden) plans list, web 390 1`] = `
{
  "lines": 626,
  "sha256": "72229f6a1b712416dccbc7b8d0e75dc572a0857ec1840ec00bb0b6a9cc6d8e2a",
}
`;

exports[`lane P1 — the phone is unchanged (golden) plans project picker, iOS 390 1`] = `
{
  "lines": 339,
  "sha256": "081ac29179067a9d5a23c33ebea0a6394e706212483373d4b6f2b30b446f5e2d",
}
`;

exports[`lane P1 — the phone is unchanged (golden) plans project picker, web 390 1`] = `
{
  "lines": 339,
  "sha256": "081ac29179067a9d5a23c33ebea0a6394e706212483373d4b6f2b30b446f5e2d",
}
`;

exports[`lane P1 — the phone is unchanged (golden) plans with superseded shown, iOS 390 1`] = `
{
  "lines": 668,
  "sha256": "1603e1d61df14d02e18a8148631d884e93bdab8001f7f40ea7ad53f08c4abdac",
}
`;

exports[`lane P1 — the phone is unchanged (golden) plans with the Ask sheet open, iOS 390 1`] = `
{
  "lines": 626,
  "sha256": "61f51f1988553ce09c37e9650a5dbbc0399e6319c3ed83af0c1611a0a81c22ad",
}
`;

exports[`lane P1 — the phone is unchanged (golden) plans with the Ask sheet open, web 390 1`] = `
{
  "lines": 626,
  "sha256": "61f51f1988553ce09c37e9650a5dbbc0399e6319c3ed83af0c1611a0a81c22ad",
}
`;

exports[`lane P1 — the phone is unchanged (golden) viewer A-101 Rev 1 (superseded banner), iOS 390 1`] = `
{
  "lines": 474,
  "sha256": "96f1b08831eedcfe973d04120e32c983ce7fc74dc860ccf64f7e6bc89d4959a5",
}
`;

exports[`lane P1 — the phone is unchanged (golden) viewer A-101 Rev 1 (superseded banner), web 390 1`] = `
{
  "lines": 474,
  "sha256": "96f1b08831eedcfe973d04120e32c983ce7fc74dc860ccf64f7e6bc89d4959a5",
}
`;

exports[`lane P1 — the phone is unchanged (golden) viewer A-101 Rev 2, iOS 390 1`] = `
{
  "lines": 463,
  "sha256": "8d3f050532ecca716f13874749a85010b568615f6d08e17ffbbb1744b519df7a",
}
`;

exports[`lane P1 — the phone is unchanged (golden) viewer A-101 Rev 2, web 390 1`] = `
{
  "lines": 463,
  "sha256": "8d3f050532ecca716f13874749a85010b568615f6d08e17ffbbb1744b519df7a",
}
`;

exports[`lane P1 — the phone is unchanged (golden) viewer with the pin sheet open, iOS 390 1`] = `
{
  "lines": 566,
  "sha256": "de5dff8be7dd315a22fe48444f3858beee74ccb437b60baa91779deb02755cea",
}
`;
